src/src/objects/EM_Time_Sheet__c.object
<CustomObject>
    <fields>
        <fullName>EM_Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>LMS_Employee__c</referenceTo>
        <relationshipLabel>Time Sheets</relationshipLabel>
        <relationshipName>Time_Sheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EM_Total_Hours_Worked__c</fullName>
        <label>Total Hours Worked</label>
        <summarizedField>EM_Day__c.EM_No_of_Hours__c</summarizedField>
        <summaryForeignKey>EM_Day__c.EM_Time_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EM_Week_Days_Count__c</fullName>
        <label>Week Days Count</label>
        <summaryForeignKey>EM_Day__c.EM_Time_Sheet__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Time Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Time Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Days_should_not_exceed_7</fullName>
        <active>true</active>
        <errorConditionFormula>EM_Week_Days_Count__c  &gt; 7</errorConditionFormula>
        <errorMessage>Should not exceed 7  days per week</errorMessage>
    </validationRules>
</CustomObject>